# Astatine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: assault.cpp  assault.h  astatine.cpp  astatine.h  logger.cpp  logger.h  main.cpp  renderer.cpp  renderer.h
src/hooks/: detour_hook.cpp  detour_hook.h  hooks_manager.cpp  hooks_manager.h  swap_buffers_hook.cpp  wndproc_hook.cpp
src/utils/: pointer.cpp  pointer.h  win.cpp  win.h
